<resources>
    <string name="app_name">QuizApp</string>
    <string name="main_tv_title">Quiz App</string>
    <string name="main_card_welcome">Welcome</string>
    <string name="main_card_text">Please enter your name</string>
    <string name="main_et_name_hint">Name</string>
    <string name="main_btn_start">Start</string>
    <string name="question_image_description">Image of countries flag</string>
    <string name="question_progress_result">0/10</string>
    <string name="question_option">Indonesia</string>
    <string name="question_btn_submit">Submit</string>
    <string name="final_result">RESULT</string>
    <string name="final_congratulation">CONGRATULATION</string>
    <string name="final_name">Name</string>
    <string name="final_score">score</string>
</resources>