<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dark"
    android:orientation="vertical"
    tools:context=".FinalActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/final_result"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <ImageView
        android:layout_marginTop="40dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/trophy"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/final_congratulation"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/final_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_final_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/final_score"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:text="FINISH"
        android:textColor="@color/black"/>
</LinearLayout>